compile encoding utf-8 설정

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,11 @@ group = 'com.ddingji'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
+compileJava.options.encoding = 'UTF-8'
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
